--- a/quiz_game/WebContent/resources/style/style.css
+++ b/quiz_game/WebContent/resources/style/style.css
@@ -1,8 +1,16 @@
 body {
 	font-size: 12px;
 	font-family: sans-serif;
+	margin: auto;
+	width: 85%;
 }
 
 .selected {
 	font-style: italic;
+}
+
+.search-data {
+	margin-bottom: 15px;
+	margin-top: 15px;
+	
 }
