--- a/quiz_game/WebContent/resources/style/style.css
+++ b/quiz_game/WebContent/resources/style/style.css
@@ -22,3 +22,58 @@ body {
 	text-align: center;
 }
 
+.score-logged {
+	font-weight: bolder;
+	color: orange;
+}
+
+.logo-text {
+	font-size: 70px;
+	color: green;
+	margin-bottom: 20px;
+	margin-top: 10px;
+	font-family: sans-serif;
+	text-align: center;
+}
+
+.about-app{
+	width:45%;
+	margin-bottom: 20px;
+}
+
+.about-us {
+	text-decoration: none;
+}
+
+.login-panel {
+	margin:auto;
+	width: 25%;
+ 	/*width:15em; */
+}
+
+.centered {
+	text-align: center;
+}
+
+.bold {
+	font-weight: bold;
+}
+
+.about-developer {
+	text-align: justify;
+}
+
+.score-table {
+	width: 70%;
+	margin: auto;
+	margin-top: 20px;
+}
+
+.score-text {
+	letter-spacing: 50px;
+	font-size: 35px;
+	font-weight: bold;
+	color: orange;
+	margin-top: 55px;
+	text-align: center;
+}
